--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@discordjs/rest": "^0.1.0-canary.0",
     "chart.js": "^3.6.0",
     "discord-api-types": "^0.24.0",
-    "discord.js": "^13.2.0"
+    "discord.js": "^13.2.0",
+    "dotenv": "^14.2.0"
   }
 }
